--- a/installation.tex
+++ b/installation.tex
@@ -20,9 +20,8 @@ Each major operating system has its own \LaTeX{} distribution:
 
 \item[Windows] has Mik\TeX.
     Install it from \https{miktex.org/download}.
-    Mik\TeX{} offers the helpful ability to automatically download
-    additional packages whenever a document uses one that it can't find
-    on your computer.
+    Mik\TeX{} has the helpful ability to automatically download
+    additional packages as your documents use them for the first time.
 
 \item[Linux and BSD] use \TeX{} Live.
     Like most software, it is provided through your
@@ -44,8 +43,8 @@ Each major operating system has its own \LaTeX{} distribution:
 \section{Editors}
 
 Since \LaTeX{} source files are regular text files,
-you're free to create them with the usual choices, like Vim, Emacs,
-Sublime, Notepad\plusplus, and so on.\punckern\footnote{If you've never used
+you write them with the usual choices: Vim, Emacs,
+Sublime, VS~Code, and so on.\punckern\footnote{If you've never used
 any of these, try a few.
 They're popular with programmers and other folks who shuffle text around
 screens all day. Just don't use Notepad. Life is too short.}
@@ -60,5 +59,5 @@ If you can't be bothered to install \LaTeX{} on your computer,
 try online editors like Share\LaTeX{} or Overleaf.
 This book won't focus on these web-based tools,
 but the same basics apply.
-Of course, you have less control over certain aspects of online systems,
+Of course, you have less control over certain aspects
 like available fonts, the version of \LaTeX{} that's used, and so on.
