--- a/structure.tex
+++ b/structure.tex
@@ -72,18 +72,16 @@ type:
 ]{geometry}
 \end{lstlisting}
 \end{leftfigure}
-Command arguments can be spaced however you like,
-so long as there are no empty lines between arguments.
+Arguments can be spaced however you like,
+so long as there are no empty lines between them.
 
 \section{Titles, sections, and other hierarchy}
 
-Authors often split their work into sections to help readers navigate them.
+Authors often split their writing into sections to help readers navigate it.
 \LaTeX{} offers seven different commands to break up your documents:
 \verb|\part|, \verb|\chapter|, \verb|\section|, \verb|\subsection|,
 \verb|\subsubsection|, \verb|\paragraph|, and \verb|\subparagraph|.
-Issue the command where you want a section\footnote{By this
-I mean any of those seven commands, not just \texttt{\textbackslash section}.}
-to start,
+Issue the command where you want an area to start,
 providing its name as the argument.
 For example,
 \begin{leftfigure}
@@ -109,7 +107,7 @@ Goodbye!
 Some levels are only available in certain document classes---chapters,
 for example, only appear in books.
 And don't go too crazy with these commands.
-Most works only benefit from a few levels of hierarchy.
+Most works just need a few levels of hierarchy.
 
 Sections are automatically numbered---for instance,
 the title of this chapter was produced with \verb|\chapter{Document Structure}|,
