--- a/why.tex
+++ b/why.tex
@@ -157,7 +157,8 @@ obsolete---multiple times---is a testament to its staying power.}
 The good news is that  \LaTeX{} has improved by leaps and bounds in recent years.
 It's time for a guide that doesn't weigh you down with decades of legacy
 or try (in vain) to be a comprehensive reference.
-After all, you're a smart, resourceful individual who sling a search engine.
+After all, you're a smart, resourceful person who knows how to use a
+search engine.
 This book will:
 
 \begin{enumerate}
