--- a/punctuation.tex
+++ b/punctuation.tex
@@ -80,8 +80,9 @@ serve different purposes.
     mathematical expressions.
     They are similar in length to an en dash,
     but sit at a different height.
-    Minus signs are set with \verb|\textminus|, or with the hyphen character
-    when in a math environment (see \chapref{math}).
+    Minus signs are set with \verb|\textminus|,
+    or with the hyphen character
+    when in math environments (see \chapref{math}).
 \end{description}
 
 \section{Ellipses}
@@ -99,7 +100,7 @@ becomes
 \lm%
 I'm\dots{} not sure.
 \end{leftfigure}
-Ellipses are spaced differently than consecutive periods.
+Ellipses have different spacing than consecutive periods.
 Don't use the latter as a poor substitute for the former.
 
 \section{Spacing}
@@ -109,7 +110,7 @@ As we discovered in \chapref{hello},
 follows them---presumably the start of the next sentence.
 This isn't always what we want!
 Consider honorifics like Mr.\ and Ms., for example.
-In situations like these, we also need to prevent \LaTeX{} from starting a
+In these situations, we also need to prevent \LaTeX{} from starting a
 new line after the period.
 This calls for a \introduce{non-breaking space}, which we set with a tilde.
 \begin{leftfigure}
@@ -141,7 +142,7 @@ Launch in 2\,h 10\,m.
 
 \section{What next?}
 \begin{itemize}
-\item Learn other commands for spacing, such as \verb|\:|, \verb|\;|,
+\item Learn more commands for spacing, such as \verb|\:|, \verb|\;|,
     \verb|\enspace|, and \verb|\quad|.
 \item Use the \texttt{csquotes} package's \verb|\enquote| to simplify
     nested quotations, e.g., \\
@@ -153,5 +154,5 @@ Launch in 2\,h 10\,m.
 \item Add hyphenations for uncommon words using \verb|\hyphenate|
     or \verb|\-|\,.\punckern\footnote{\LaTeX{} usually does a good
     job of automatically hyphenating words, based on a dictionary of patterns
-    stored for each language. You should rarely need to use these commands.}
+    stored for each language. You should rarely need these commands.}
 \end{itemize}
