--- a/why.tex
+++ b/why.tex
@@ -25,7 +25,7 @@ Do many books look this way? Why not?
 \begin{leftfigure}
 \fontspec[Scale=MatchUppercase]{KJV1611}\Large E Gorham St.
 \end{leftfigure}
-And why an important switch in a spaceship might be labeled like this:
+And why a very important switch in a spaceship might be labeled like this:
 \begin{leftfigure}
 \fontspec[Scale=MatchUppercase]{Futura-Med}CM/SM SEP
 \end{leftfigure}
