--- a/back.tex
+++ b/back.tex
@@ -6,7 +6,7 @@
 
 \section{For \texorpdfstring{\LaTeX}{LaTeX}}
 
-As promised at the start, this book is incomplete.
+As promised from the start, this book is incomplete.
 To keep it short,
 major \LaTeX{} features---like figures, captions, tables, graphics,
 and bibliographies---haven't been discussed.
@@ -95,8 +95,8 @@ Captions use
 a Helvetica restoration by Christian Schwartz.
 Other digitizations of the ubiquitous Swiss typeface are based on fonts made for
 Linotype and phototypesetting machines,
-resulting in digital versions with all the compromises and kludges from those
-past two generations of printing technology.
+resulting in digital versions with all the compromises and kludges from the
+two previous generations of printing technology.
 Schwartz based his work on Helvetica's original drawings,
 producing a design faithful to the original cold metal type.
 
@@ -106,11 +106,12 @@ Designed by Paul Renner and first released in 1927,
 Futura has found itself almost everywhere,
 from advertising and political campaigns to the moon.
 Douglas Thomas's recent history of the typeface,
-\textit{Never Use Futura}, is a fantastic read.
+{\fontspec[Ligatures=TeX, Scale=MatchLowercase]{Futura-Boo}Never Use Futura},
+is a fantastic read.
 
 Various bits of non-Latin text are set in
 {\fontspec[Ligatures=TeX,Scale=MatchLowercase]{NotoSerif-Regular}Noto},
-a type family by Google that covers \emph{every} language
+a type family by Google that covers \emph{every} glyph
 in the Unicode standard.
 
 Finally,
@@ -119,6 +120,7 @@ the book---and
 {\fontspec[Scale=MatchUppercase]{TeX Gyre Termes}\TeX{} Gyre Termes}---the
 free alternative to Times Roman seen on page \pageref{typography}---are the
 work of Grupa Użytkowników Systemu \TeX{}, the Polish \TeX{} Users' Group.
-An overview of these projects can be found at the following locations:\\
+Overviews of these excellent projects can be found
+on the \textsc{gust} website:\\
 \http{www.gust.org.pl/projects/e-foundry/latin-modern} \\
 \http{www.gust.org.pl/projects/e-foundry/tex-gyre}.
