Use Pinyon Script for flower CM/SM Sep
OFL is your friend.

--- a/why.tex
+++ b/why.tex
@@ -31,7 +31,7 @@ And why a very important switch in a spaceship might be labeled like this:
 \end{leftfigure}
 Not like this:
 \begin{leftfigure}
-\fontspec{Old Script}\Large CM/SM Sep
+\fontspec{Pinyon Script}\Large CM/SM Sep
 \end{leftfigure}
 
 Written communication is as much about the shapes and layout of your words
