Tweak copyright page

--- a/modern-latex.tex
+++ b/modern-latex.tex
@@ -359,7 +359,7 @@ The author apologizes for any typos,
 f\raisebox{-0.1ex}{o}rmatt\raisebox{0.1ex}{i}ng mistakes,
 inaccuracies,
 and other flubs.
-He welcomes you to point them out via this book's Git repository at \\
+He welcomes you to fix them in this book's Git repository at \\
 \https{github.com/mrkline/latex-book}
 
 \vspace{\baselineskip}
@@ -368,7 +368,7 @@ Questions, comments, concerns, and diatribes can also be emailed to \\
 
 \vspace{\baselineskip}
 The author does not have a checking account with the Bank of San Serriffe,
-but will happily compensate your feedback with a beverage of your choice
+but will happily pay for your contributions with a beverage of your choice
 next time we meet.
 
 \vspace{0.5in}
