Another pass for Ch. 1--3

--- a/hello.tex
+++ b/hello.tex
@@ -70,7 +70,7 @@ so we use it to leave notes for anybody reading
 the document's source.\punckern\footnote{Including, perhaps most importantly,
 a confused version of your future self!}
 Finally, \verb|\begin{document}| tells \LaTeX{} that what follows
-is our actual contents,
+is the actual document content,
 and \verb|\end{document}| states that we are finished.
 
 Let's cover some more basics.
@@ -139,7 +139,7 @@ They precede the mandatory ones,
 are enclosed in square brackets, and are separated by commas.
 Say you want to inform \LaTeX{} that your document should be printed as double-sided
 pages\footnote{\texttt{twoside} introduces commands
-that only make sense in the context of double-sided printing,
+that only make sense for double-sided printing,
 such as ones that skip to the start of the next odd page.
 It also allows you to have different margins for even and odd pages,
 which is useful for texts like this book.}
