--- a/installation.tex
+++ b/installation.tex
@@ -4,7 +4,7 @@
 You install \LaTeX{} on your computer as a \introduce{distribution}.
 It comes with:
 \begin{enumerate}
-\item \LaTeX, the program---the thing that typesets text files into
+\item \LaTeX, the program---the thing that turns text files into
     documents.\footnote{Well, actually, multiple \LaTeX{} programs,
     but we're getting to that.}
 \item A common set of \LaTeX{} \introduce{packages}.
