--- a/why.tex
+++ b/why.tex
@@ -34,8 +34,8 @@ Not like this:
 \fontspec{Pinyon Script}\Large CM/SM Sep
 \end{leftfigure}
 
-Written communication is as much about the shapes and layout of your words
-as it is about the ones you choose.
+Effective written communication is about the shapes and layout of your words,
+not just which ones you choose.
 Good typography isn't just art---it's function.
 And if you care about any of this,
 you you should try \LaTeX,\punckern\footnote{Pronounced ``lay-tech''
@@ -61,7 +61,7 @@ as what comes out of your printer.
 \LaTeX{} is different. Here, documents are written as
 ``plain'' text files, using \introduce{markup} to specify
 how the final result should look.
-If you've done any web development, this is a similar
+If you've done any web design, this is a similar
 process---just as \acronym{html} and \acronym{css} describe
 the page you want browsers to draw, your markup describes
 the appearance of your document to \LaTeX.
@@ -79,7 +79,7 @@ as what comes out of your printer.
 \LaTeX{} is different. Here, documents are written as
 ``plain'' text files, using \introduce{markup} to specify
 how the final result should look.
-If you've done any web development, this is a similar
+If you've done any web design, this is a similar
 process---just as \acronym{html} and \acronym{css} describe
 the page you want browsers to draw, your markup describes
 the appearance of your document to \LaTeX.
@@ -114,7 +114,7 @@ but it comes with a few advantages:
     \mbox{\textsc{\addfontfeature{LetterSpace=15}letterspacing}} so the characters
     don't look \textsc{\addfontfeature{LetterSpace=-10}too crowded}.
     If I decide tomorrow that I would rather introduce new terms
-    \textbf{\itshape with this look}, or that acronyms should look
+    \textbf{\itshape with this look}, or that acronyms should be displayed
     {\small\addfontfeature{LetterSpace=6} LIKE THIS},
     I just change the two lines that define those commands.
     Every spot in this book that uses them is immediately updated.
@@ -141,9 +141,9 @@ There are plenty of great resources online.
 
 Unfortunately, most of the introductions you will find have two fatal flaws:
 they are long, and they are old.
-A 200+ page book seems daunting to anybody just trying to learn the basics,
-and age matters because of how much typesetting has changed since 1986.
-When \LaTeX{} was first released that year, none of the publishing technologies
+Beginners don't want---or need---hundreds of pages just to learn the basics,
+and older guides waste your time with outdated information.
+When \LaTeX{} was first released in 1986, none of the publishing technologies
 we use today existed.
 Adobe wouldn't debut their Portable Document Format for seven more years,
 and desktop publishing was a fledgling curiosity.
@@ -164,8 +164,7 @@ This book will:
 \begin{enumerate}
 \item Teach you the fundamentals of \LaTeX.
 \item Point you to places where you can learn more.
-\item Show you how to use modern typesetting technologies and techniques,
-    like OpenType and microtypography.
+\item Show you how to take advantage of modern typesetting technologies.
 \item End promptly thereafter.
 \end{enumerate}
 \vspace{\baselineskip}
