--- a/installation.tex
+++ b/installation.tex
@@ -1,8 +1,8 @@
 \chapter{Installation}
 \label{installation}
 
-You install \LaTeX{} on your computer as a \introduce{distribution}.
-It comes with:
+When you install \LaTeX{} on your computer, it comes packaged as a
+\introduce{distribution} that contains:
 \begin{enumerate}
 \item \LaTeX, the program---the thing that turns text files into
     documents.\footnote{Well, actually, multiple \LaTeX{} programs,
@@ -30,7 +30,7 @@ Each major operating system has its own \LaTeX{} distribution:
     or \texttt{texlive-\allowbreak most} package that installs everything
     you need.\punckern\footnote{%
     If you'd rather keep the install size down,
-    Linux distributions usually break \TeX{} Live into multiple distro packages.
+    Linux distributions usually break \TeX{} Live into multiple packages.
     Look for ones with names like
     \texttt{texlive-\allowbreak core}, \texttt{texlive-\allowbreak luatex}
     and \texttt{texlive-\allowbreak xetex}.
@@ -55,9 +55,9 @@ in its installation chapter. See Appendix~\ref{resources}.)
 
 \section{Online options}
 
-If you can't be bothered to install \LaTeX{} on your computer,
+If you don't want to install \LaTeX{} on your computer,
 try online editors like Share\LaTeX{} or Overleaf.
 This book won't focus on these web-based tools,
 but the same basics apply.
-Of course, you have less control over certain aspects
+Of course, you have less control over certain aspects,
 like available fonts, the version of \LaTeX{} that's used, and so on.
