--- a/textformatting.tex
+++ b/textformatting.tex
@@ -53,16 +53,16 @@ A (mostly) complete list follows:
 \end{flushleftfigure}
 Prefer the first form (which takes the text to format as an argument)
 over the second
-(which affect the group they are issued in),
-since the former automatically fix up the spacing around
-them.\punckern\footnote{For example,
+(which affects the group it's issued in),
+since the former automatically fixes up the spacing around
+the formatted text.\punckern\footnote{For example,
 \textit{italic type} amidst upright type needs to be followed
 by a slight amount of additional space, called an ``italic correction''\quotekern.}
-However, when formatting multiple paragraphs,
-or when defining the style of other commands,\punckern\footnote{%
+However, the second variety is your only option
+when formatting multiple paragraphs
+or defining the style of other commands.\punckern\footnote{%
 For instance, this book's section headers are styled with
 \texttt{\textbackslash Large\allowbreak\textbackslash itshape}.}
-the second variety is your only option.
 
 \section{Sizes}
 
